--- a/url-shortening/src/scss/components/_hamburger.scss
+++ b/url-shortening/src/scss/components/_hamburger.scss
@@ -31,6 +31,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   top: 0;
   left: 0;
   bottom: 0;
