--- a/url-shortening/src/scss/components/_start.scss
+++ b/url-shortening/src/scss/components/_start.scss
@@ -2,7 +2,10 @@
   margin-top: 15vh;
   padding: 40px 0 50px;
   text-align: center;
-  background-color: $very-dark-violet;
+  background-image: url('/images/bg-boost-desktop.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: $dark-violet;
 }
 
 .start-title {
