--- a/url-shortening/src/scss/components/_statistics.scss
+++ b/url-shortening/src/scss/components/_statistics.scss
@@ -1,6 +1,8 @@
 .statistics {
-  margin-top: 20vh;
+  margin-top: 20px;
+  padding: 15vh 0;
   text-align: center;
+  background-color: #F0F1F6;
 }
 
 .statistics-text {
@@ -11,17 +13,21 @@
 .statistics-images {
   display: flex;
   align-items: center;
-  gap: 30px;;
+  gap: 30px;
   margin-top: 50px;
   text-align: left;
 }
 
-.statics-item {
-  display: flex;
-  flex-direction: column;
+.statistics-item {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
 .statistics-image {
+  position: relative;
+  top: -40px;
   display: inline-block;
   border-radius: 100%;
   padding: 20px;
