Fix background images
Cemplete last todo by involving new webpack config. Also the css validation issues were fixed with stylelint.

--- a/url-shortening/src/scss/components/_footer.scss
+++ b/url-shortening/src/scss/components/_footer.scss
@@ -9,7 +9,7 @@
 }
 
 .footer-logo {
-  color: #FFFFFF;
+  color: #fff;
 }
 
 .footer-links {
@@ -24,7 +24,7 @@
 
 .footer-caption {
   margin-bottom: 20px;
-  color: #FFFFFF;
+  color: #fff;
 }
 
 .footer-link {
