--- a/url-shortening/src/scss/components/_start.scss
+++ b/url-shortening/src/scss/components/_start.scss
@@ -1,14 +1,14 @@
 .start {
   padding: 40px 0 50px;
   text-align: center;
-  background-image: url('/images/bg-boost-desktop.svg');
+  background-image: url('../images/bg-boost-desktop.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-color: $dark-violet;
 }
 
 .start-title {
-  color: #FFFFFF;
+  color: #fff;
 }
 
 .start-button {
