--- a/url-shortening/src/scss/components/_statistics.scss
+++ b/url-shortening/src/scss/components/_statistics.scss
@@ -2,7 +2,7 @@
   margin-top: 20px;
   padding: 15vh 0;
   text-align: center;
-  background-color: #F0F1F6;
+  background-color: #f0f1f6;
 }
 
 .statistics-text {
@@ -21,8 +21,8 @@
 .statistics-item {
   padding: 10px;
   border-radius: 10px;
-  background-color: #FFFFFF;
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  background-color: #fff;
+  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
 .statistics-image {
@@ -43,4 +43,3 @@
   height: 7px;
   background-color: $cyan;
 }
-
