--- a/url-shortening/src/scss/media/_media.scss
+++ b/url-shortening/src/scss/media/_media.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1259.98px) { 
+@media (max-width: 1259.98px) {
   .container {
     width: 940px;
   }
@@ -8,7 +8,7 @@
   }
 }
 
-@media (max-width: 991.98px) { 
+@media (max-width: 991.98px) {
   .container {
     width: 760px;
   }
@@ -36,10 +36,9 @@
     border-bottom: 1px solid black;
     font-size: 12px;
   }
-  
 }
 
-@media (max-width: 767.98px) {  
+@media (max-width: 767.98px) {
   .container {
     width: 540px;
   }
@@ -78,7 +77,8 @@
     width: 7px;
   }
 
-  .mt-50, .mt-100 {
+  .mt-50,
+  .mt-100 {
     margin-top: 0;
   }
 
@@ -89,23 +89,20 @@
   }
 }
 
-@media (max-width: 575.98px) { 
+@media (max-width: 575.98px) {
   html {
     font-size: 16px;
   }
+
   .container {
     width: 95%;
-  }
-
-  .form-group {
-    padding: 30px 0;
   }
 
   .form-group {
     grid-template-columns: 1fr;
     gap: 2vh;
     padding: 30px 20px;
-    background-image: url('/images/bg-shorten-mobile.svg');
+    background-image: url('../images/bg-shorten-mobile.svg');
     background-size: contain;
     background-position: 100%;
   }
@@ -119,7 +116,7 @@
   }
 
   .start {
-    background-image: url('/images/bg-boost-mobile.svg');
+    background-image: url('../images/bg-boost-mobile.svg');
     padding: 100px 0;
   }
 }
